# Proyecto-Mastemind

./: README.md  main.py  pyproject.toml
src/: calcular_clavijas.py  calcular_fitness.py  generar_poblacion.py  generar_solucion.py  graficos.py  parametros.py  poblar_siguiente_generacion.py  reproducir_descendencia.py  seleccionar_padres.py  visual_mastermind.py
test/: test_calcular_clavijas.py  test_calcular_fitness.py  test_fitness.py  test_generar_poblacion.py  test_generar_solucion.py  test_poblar_siguiente_generacion.py  test_reproducir_descendencia.py  test_seleccionar_padres.py
