[project]
name = "proyecto-mastemind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.1",
    "pytest-sugar>=1.1.1",
    "wakatime>=14.0.1",

    "pytest>=9.0.1",
    "pytest-sugar>=1.1.1",
    "wakatime>=14.0.1",
    ]
